--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "firebase": "^10.3.1",
     "jquery": "^3.7.1",
     "perfect-scrollbar": "^1.5.5",
     "tui-pagination": "^3.4.1",
